# RelayMail

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
apps/relaymail-api/: FUTURE.md  README.md
apps/relaymail-console/: FUTURE.md  README.md
apps/relaymail-direct-mta/: Cargo.toml.placeholder  FUTURE.md  README.md
apps/relaymail-email-ses/: Cargo.toml  README.md
apps/relaymail-email-ses/src/: main.rs
apps/relaymail-email-ses/src/app/: consumer_loop.rs  mod.rs  run.rs
apps/relaymail-email-ses/src/config/: aws.rs  delivery.rs  error.rs  flat.rs  general.rs  loader.rs  mod.rs  polling.rs  processing.rs  runtime.rs  s3_filter.rs  ses.rs  sources.rs  sqs.rs
apps/relaymail-email-ses/src/dry_run/: mod.rs  mode.rs
apps/relaymail-email-ses/src/wire/: aws.rs  delivery.rs  domain.rs  http.rs  mod.rs
apps/relaymail-email-ses/tests/: config_env_loading.rs
apps/relaymail-events/: FUTURE.md  README.md
apps/relaymail-operator/: Cargo.toml
apps/relaymail-operator/src/: crd.rs  error.rs  main.rs
apps/relaymail-operator/src/controller/: configmap.rs  deployment.rs  hpa.rs  mod.rs  owner_ref.rs  pdb.rs  reconciler.rs  service.rs  serviceaccount.rs  status.rs
crates/relaymail-aws/: Cargo.toml
crates/relaymail-aws/src/: lib.rs  transport.rs
crates/relaymail-aws/src/config/: loader.rs  mod.rs
crates/relaymail-aws/src/ddb/: claim.rs  error_map.rs  impl_idempotency_store.rs  mod.rs  store.rs  update.rs
crates/relaymail-aws/src/events/: decode.rs  direct.rs  dispatch.rs  error.rs  eventbridge.rs  mod.rs  parser.rs  sns.rs  types.rs
crates/relaymail-aws/src/s3/: error_map.rs  fetch.rs  impl_object_store.rs  mod.rs  move_object.rs  store.rs  tag.rs
crates/relaymail-aws/src/ses/: error_map.rs  impl_email_sender.rs  mod.rs  sender.rs
crates/relaymail-aws/src/sqs/: consumer.rs  error_map.rs  impl_message_source.rs  mod.rs
crates/relaymail-aws/src/tagging/: mod.rs
crates/relaymail-aws/tests/: events_direct.rs  events_eventbridge.rs  events_sns.rs  events_unknown.rs
crates/relaymail-core/: Cargo.toml
crates/relaymail-core/src/: lib.rs
crates/relaymail-core/src/clock/: contract.rs  mod.rs  system_clock.rs
crates/relaymail-core/src/config/: duration.rs  env_var.rs  error.rs  mod.rs
crates/relaymail-core/src/disposition/: attempt.rs  classification.rs  mod.rs  policy.rs  policy_tests.rs
crates/relaymail-core/src/errors/: domain.rs  mod.rs
crates/relaymail-core/src/idempotency/: error.rs  in_memory.rs  key.rs  mod.rs  store.rs
crates/relaymail-core/src/ids/: message.rs  mod.rs  object.rs  tenant.rs
crates/relaymail-core/src/message_source/: contract.rs  envelope.rs  error.rs  mod.rs
crates/relaymail-core/src/object_store/: contract.rs  error.rs  metadata.rs  mod.rs
crates/relaymail-core/src/time/: instant.rs  mod.rs
crates/relaymail-core/tests/: config_env_var.rs  disposition_policy.rs  idempotency_in_memory.rs
crates/relaymail-delivery/: Cargo.toml
crates/relaymail-delivery/src/: capabilities.rs  error.rs  lib.rs  normalized.rs  request.rs  result.rs  sender.rs
crates/relaymail-delivery/tests/: error_classification.rs
crates/relaymail-email/: Cargo.toml
crates/relaymail-email/src/: error.rs  lib.rs
crates/relaymail-email/src/metadata/: content_type.rs  extract.rs  mod.rs
crates/relaymail-email/src/parse/: addresses.rs  headers.rs  mod.rs  parser.rs
crates/relaymail-email/src/raw/: message.rs  mod.rs  size_limits.rs
crates/relaymail-email/src/redaction/: body.rs  headers.rs  mod.rs
crates/relaymail-email/src/validation/: limits.rs  mod.rs  recipients.rs  required_headers.rs
crates/relaymail-email/tests/: parse_basic.rs  parse_configuration_set.rs  parse_multipart.rs  validation_missing_headers.rs  validation_size.rs
crates/relaymail-providers/: Cargo.toml
crates/relaymail-providers/src/: common.rs  lib.rs  postmark.rs  resend.rs  smtp2go.rs
crates/relaymail-runtime/: Cargo.toml
crates/relaymail-runtime/src/: lib.rs  webhooks.rs
crates/relaymail-runtime/src/http/: error.rs  handlers.rs  mod.rs  readiness.rs  router.rs  server.rs
crates/relaymail-runtime/src/metrics_init/: descriptors.rs  emit.rs  mod.rs  registry.rs
crates/relaymail-runtime/src/pipeline/: config.rs  ctx.rs  error.rs  error_tests.rs  event_parser.rs  failed.rs  mod.rs  outcome.rs  process.rs  stage_claim.rs  stage_dispose.rs  stage_fetch.rs  stage_filter.rs  stage_send.rs  stage_validate.rs  success.rs
crates/relaymail-runtime/src/polling/: loop_driver.rs  mod.rs
crates/relaymail-runtime/src/retry/: jitter.rs  mod.rs  policy.rs
crates/relaymail-runtime/src/shutdown/: mod.rs  signal.rs  token.rs
crates/relaymail-runtime/src/tracing_init/: init.rs  layers.rs  mod.rs
crates/relaymail-runtime/src/transport/: mod.rs
crates/relaymail-runtime/src/worker/: mod.rs  outcome.rs  pool.rs
crates/relaymail-runtime/tests/: http_routes.rs  pipeline_dispose_modes.rs  pipeline_dry_run.rs  pipeline_happy_path.rs  pipeline_idempotency_hit.rs  pipeline_transient_send.rs  pipeline_validation_fail.rs  pipeline_with_tenant.rs  readiness_tracker.rs  worker_pool_drains.rs
crates/relaymail-runtime/tests/common/: fixture.rs  mod.rs  parser.rs
crates/relaymail-testing/: Cargo.toml
crates/relaymail-testing/src/: lib.rs
crates/relaymail-testing/src/fake_clock/: clock.rs  mod.rs
crates/relaymail-testing/src/fake_email_sender/: inspect.rs  mod.rs  script.rs  sender.rs
crates/relaymail-testing/src/fake_idempotency_store/: mod.rs  store.rs
crates/relaymail-testing/src/fake_message_source/: builder.rs  mod.rs  source.rs
crates/relaymail-testing/src/fake_object_store/: mod.rs  store.rs  tag_recorder.rs
crates/relaymail-testing/src/fixtures/: eml.rs  envelopes.rs  events.rs  mod.rs
crates/relaymail-testing/tests/: email_sender.rs  fakes.rs
deploy/docker/: Dockerfile.relaymail-email-ses  (+1 more)
docs/: architecture.md  coverage.md  future-direct-mta.md  idempotency.md  naming.md  operations.md  production-checklist.md  provider-adapter-guide.md  security.md
scripts/: check-file-length.sh
(+52 files in other folders)
