[package]
name = "relaymail-operator"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "relaymail-operator"
path = "src/main.rs"

[dependencies]
kube = { version = "0.93", features = ["runtime", "derive", "client"] }
k8s-openapi = { version = "0.22", features = ["v1_29"] }
schemars = "0.8"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
