[package]
name = "relaymail-delivery"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
relaymail-core = { workspace = true }
relaymail-email = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
