[package]
name = "relaymail-providers"
version = "1.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "REST email provider adapters for RelayMail."

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
relaymail-delivery = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
relaymail-core = { workspace = true }
