[package]
name = "relaymail-runtime"
version = "1.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
hmac = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
relaymail-core = { workspace = true }
relaymail-delivery = { workspace = true }
relaymail-email = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
bytes = { workspace = true }
relaymail-testing = { workspace = true }
